# biocom

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  biocom.toml  bot.py  compose.yaml  go.mod  go.sum  requirements.txt
cmd/biocom/: main.go  poller.go
cmd/watchdog/: main.go
config/: biocom.toml
deploy/: biocom-watchdog-guard.service  install-guard.sh
internal/bot/: assets.go  bot.go  commands.go  messages.go  quotes.go
internal/config/: config.go
internal/docker/: client.go
internal/store/: store.go
internal/watchdog/: watchdog.go
src/: bot.rs  config.rs  docker.rs  main.rs  watchdog.rs
